# cardano-mq-sync

./: .gitignore  CHANGELOG.md  NOTICE  README.md  cabal.project  flake.nix  flake.nix.simple  overlay.nix  shell.nix
cardano-mq-sync/: cardano-mq-sync.cabal
cardano-mq-sync/src/: Main.hs
nix/: haskell.nix  pkgs.nix
