cabal-version: 3.0

name:               cardano-mq-sync
version:             0.1.0.0
synopsis:            A sync client against cardano-node that dumps to rabbitmq
description:         This is intended to demonstrate how to write simple
                     applications that interact with the cardano-node,
                     using the cardano-api.
license:             Apache-2.0
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
license-files:
  LICENSE
  NOTICE
extra-source-files:  CHANGELOG.md

common base                         { build-depends: base                             >= 4.14       && < 4.15     }

common project-config
  default-language:     Haskell2010

executable cardano-mq-sync
  import:               base, project-config
  hs-source-dirs:       src
  main-is:          Main.hs
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wpartial-fields
                      -Wredundant-constraints
                      -Wunused-packages
  build-depends:       amqp,
                       base16-bytestring,
                       binary,
                       bech32,
                       bytestring,
                       cardano-ledger-alonzo,
                       cardano-api,
                       cardano-ledger-core,
                       cardano-ledger-shelley,
                       compact-map,
                       cardano-slotting,
                       containers,
                       optparse-applicative,
                       ouroboros-consensus-shelley,
                       text,
                       transformers,
